--- a/src/styles/icons.scss
+++ b/src/styles/icons.scss
@@ -10,8 +10,8 @@
   font-display: block;
 }
 
-[class^='chop-icon_']::before,
-[class*=' chop-icon_']::before {
+[class^='chop-icon__']::before,
+[class*=' chop-icon__']::before {
   font-family: 'chop-icons' !important;
   font-style: normal;
   font-weight: normal;
@@ -22,258 +22,258 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-.chop-icon_home:before {
+.chop-icon__home:before {
   content: '\e900';
 }
-.chop-icon_pencil:before {
+.chop-icon__pencil:before {
   content: '\e905';
 }
-.chop-icon_youtube:before {
+.chop-icon__youtube:before {
   content: '\e912';
 }
-.chop-icon_book:before {
+.chop-icon__book:before {
   content: '\e91f';
 }
-.chop-icon_file-text:before {
+.chop-icon__file-text:before {
   content: '\e922';
 }
-.chop-icon_folder:before {
+.chop-icon__folder:before {
   content: '\e92f';
 }
-.chop-icon_folder-open:before {
+.chop-icon__folder-open:before {
   content: '\e930';
 }
-.chop-icon_folder-plus:before {
+.chop-icon__folder-plus:before {
   content: '\e931';
 }
-.chop-icon_folder-minus:before {
+.chop-icon__folder-minus:before {
   content: '\e932';
 }
-.chop-icon_folder-download:before {
+.chop-icon__folder-download:before {
   content: '\e933';
 }
-.chop-icon_folder-upload:before {
+.chop-icon__folder-upload:before {
   content: '\e934';
 }
-.chop-icon_download:before {
+.chop-icon__download:before {
   content: '\e960';
 }
-.chop-icon_upload:before {
+.chop-icon__upload:before {
   content: '\e961';
 }
-.chop-icon_floppy-disk:before {
+.chop-icon__floppy-disk:before {
   content: '\e962';
 }
-.chop-icon_undo:before {
+.chop-icon__undo:before {
   content: '\e965';
 }
-.chop-icon_redo:before {
+.chop-icon__redo:before {
   content: '\e966';
 }
-.chop-icon_user:before {
+.chop-icon__user:before {
   content: '\e971';
 }
-.chop-icon_users:before {
+.chop-icon__users:before {
   content: '\e972';
 }
-.chop-icon_user-plus:before {
+.chop-icon__user-plus:before {
   content: '\e973';
 }
-.chop-icon_user-minus:before {
+.chop-icon__user-minus:before {
   content: '\e974';
 }
-.chop-icon_user-check:before {
+.chop-icon__user-check:before {
   content: '\e975';
 }
-.chop-icon_spinner5:before {
+.chop-icon__spinner5:before {
   content: '\e97e';
 }
-.chop-icon_spinner11:before {
+.chop-icon__spinner11:before {
   content: '\e984';
 }
-.chop-icon_search:before {
+.chop-icon__search:before {
   content: '\e986';
 }
-.chop-icon_zoom-in:before {
+.chop-icon__zoom-in:before {
   content: '\e987';
 }
-.chop-icon_zoom-out:before {
+.chop-icon__zoom-out:before {
   content: '\e988';
 }
-.chop-icon_enlarge:before {
+.chop-icon__enlarge:before {
   content: '\e989';
 }
-.chop-icon_shrink:before {
+.chop-icon__shrink:before {
   content: '\e98a';
 }
-.chop-icon_enlarge2:before {
+.chop-icon__enlarge2:before {
   content: '\e98b';
 }
-.chop-icon_shrink2:before {
+.chop-icon__shrink2:before {
   content: '\e98c';
 }
-.chop-icon_lock:before {
+.chop-icon__lock:before {
   content: '\e98f';
 }
-.chop-icon_unlocked:before {
+.chop-icon__unlocked:before {
   content: '\e990';
 }
-.chop-icon_cog:before {
+.chop-icon__cog:before {
   content: '\e994';
 }
-.chop-icon_trophy:before {
+.chop-icon__trophy:before {
   content: '\e99e';
 }
-.chop-icon_bin:before {
+.chop-icon__bin:before {
   content: '\e9ad';
 }
-.chop-icon_power:before {
+.chop-icon__power:before {
   content: '\e9b5';
 }
-.chop-icon_list:before {
+.chop-icon__list:before {
   content: '\e9ba';
 }
-.chop-icon_list2:before {
+.chop-icon__list2:before {
   content: '\e9bb';
 }
-.chop-icon_menu:before {
+.chop-icon__menu:before {
   content: '\e9bd';
 }
-.chop-icon_menu2:before {
+.chop-icon__menu2:before {
   content: '\e9be';
 }
-.chop-icon_menu3:before {
+.chop-icon__menu3:before {
   content: '\e9bf';
 }
-.chop-icon_menu4:before {
+.chop-icon__menu4:before {
   content: '\e9c0';
 }
-.chop-icon_flag:before {
+.chop-icon__flag:before {
   content: '\e9cc';
 }
-.chop-icon_attachment:before {
+.chop-icon__attachment:before {
   content: '\e9cd';
 }
-.chop-icon_eye:before {
+.chop-icon__eye:before {
   content: '\e9ce';
 }
-.chop-icon_eye-plus:before {
+.chop-icon__eye-plus:before {
   content: '\e9cf';
 }
-.chop-icon_eye-minus:before {
+.chop-icon__eye-minus:before {
   content: '\e9d0';
 }
-.chop-icon_eye-blocked:before {
+.chop-icon__eye-blocked:before {
   content: '\e9d1';
 }
-.chop-icon_bookmark:before {
+.chop-icon__bookmark:before {
   content: '\e9d2';
 }
-.chop-icon_star-full:before {
+.chop-icon__star-full:before {
   content: '\e9d9';
 }
-.chop-icon_question:before {
+.chop-icon__question:before {
   content: '\ea09';
 }
-.chop-icon_plus:before {
+.chop-icon__plus:before {
   content: '\ea0a';
 }
-.chop-icon_minus:before {
+.chop-icon__minus:before {
   content: '\ea0b';
 }
-.chop-icon_cross:before {
+.chop-icon__cross:before {
   content: '\ea0f';
 }
-.chop-icon_checkmark:before {
+.chop-icon__checkmark:before {
   content: '\ea10';
 }
-.chop-icon_enter:before {
+.chop-icon__enter:before {
   content: '\ea13';
 }
-.chop-icon_exit:before {
+.chop-icon__exit:before {
   content: '\ea14';
 }
-.chop-icon_loop2:before {
+.chop-icon__loop2:before {
   content: '\ea2e';
 }
-.chop-icon_arrow-up-left:before {
+.chop-icon__arrow-up-left:before {
   content: '\ea31';
 }
-.chop-icon_arrow-up:before {
+.chop-icon__arrow-up:before {
   content: '\ea32';
 }
-.chop-icon_arrow-up-right:before {
+.chop-icon__arrow-up-right:before {
   content: '\ea33';
 }
-.chop-icon_arrow-right:before {
+.chop-icon__arrow-right:before {
   content: '\ea34';
 }
-.chop-icon_arrow-down-right:before {
+.chop-icon__arrow-down-right:before {
   content: '\ea35';
 }
-.chop-icon_arrow-down:before {
+.chop-icon__arrow-down:before {
   content: '\ea36';
 }
-.chop-icon_arrow-down-left:before {
+.chop-icon__arrow-down-left:before {
   content: '\ea37';
 }
-.chop-icon_arrow-left:before {
+.chop-icon__arrow-left:before {
   content: '\ea38';
 }
-.chop-icon_circle-up:before {
+.chop-icon__circle-up:before {
   content: '\ea41';
 }
-.chop-icon_circle-right:before {
+.chop-icon__circle-right:before {
   content: '\ea42';
 }
-.chop-icon_circle-down:before {
+.chop-icon__circle-down:before {
   content: '\ea43';
 }
-.chop-icon_circle-left:before {
+.chop-icon__circle-left:before {
   content: '\ea44';
 }
-.chop-icon_checkbox-checked:before {
+.chop-icon__checkbox-checked:before {
   content: '\ea52';
 }
-.chop-icon_checkbox-unchecked:before {
+.chop-icon__checkbox-unchecked:before {
   content: '\ea53';
 }
-.chop-icon_radio-checked:before {
+.chop-icon__radio-checked:before {
   content: '\ea54';
 }
-.chop-icon_radio-checked2:before {
+.chop-icon__radio-checked2:before {
   content: '\ea55';
 }
-.chop-icon_radio-unchecked:before {
+.chop-icon__radio-unchecked:before {
   content: '\ea56';
 }
-.chop-icon_scissors:before {
+.chop-icon__scissors:before {
   content: '\ea5a';
 }
-.chop-icon_filter:before {
+.chop-icon__filter:before {
   content: '\ea5b';
 }
-.chop-icon_table2:before {
+.chop-icon__table2:before {
   content: '\ea71';
 }
-.chop-icon_section:before {
+.chop-icon__section:before {
   content: '\ea76';
 }
-.chop-icon_embed2:before {
+.chop-icon__embed2:before {
   content: '\ea80';
 }
-.chop-icon_facebook2:before {
+.chop-icon__facebook2:before {
   content: '\ea91';
 }
-.chop-icon_telegram:before {
+.chop-icon__telegram:before {
   content: '\ea95';
 }
-.chop-icon_flickr:before {
+.chop-icon__flickr:before {
   content: '\eaa3';
 }
-.chop-icon_flickr2:before {
+.chop-icon__flickr2:before {
   content: '\eaa4';
 }
-.chop-icon_github:before {
+.chop-icon__github:before {
   content: '\eab0';
 }
