--- a/src/components/layout/styles.scss
+++ b/src/components/layout/styles.scss
@@ -2,4 +2,25 @@
 
 .layout {
   font-family: $Regular;
+  display: grid;
+  grid-gap: 0;
+  height: 100%;
+  grid-template-columns: 2fr 10fr 2fr;
+  grid-template-rows: 1fr 10fr 1fr;
+  grid-template-areas:
+    'page-header  page-header  page-header'
+    '. page-content .'
+    'page-footer  page-footer  page-footer';
+
+  &__header {
+    grid-area: page-header;
+  }
+
+  &__footer {
+    grid-area: page-footer;
+  }
+
+  &__main {
+    grid-area: page-content;
+  }
 }
