--- a/src/components/layout/styles.scss
+++ b/src/components/layout/styles.scss
@@ -2,16 +2,19 @@
 
 .layout {
   font-family: $Regular;
+
+  // Grid template
   display: grid;
   grid-gap: 0;
   height: 100%;
   grid-template-columns: 2fr 10fr 2fr;
-  grid-template-rows: 1fr 10fr 1fr;
+  grid-template-rows: 6rem auto 2rem;
   grid-template-areas:
     'page-header  page-header  page-header'
-    '. page-content .'
+    'page-navigation page-content page-sidebar'
     'page-footer  page-footer  page-footer';
 
+  // Grid areas
   &__header {
     grid-area: page-header;
   }
@@ -22,5 +25,13 @@
 
   &__main {
     grid-area: page-content;
+  }
+
+  &__navigation {
+    grid-area: page-navigation;
+  }
+
+  &__sidebar {
+    grid-area: page-sidebar;
   }
 }
