--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -1,13 +1,15 @@
 // Light theme colors
 $light-font-color: hsl(0, 0%, 0%);
 $light-background-color: hsl(60, 100%, 99%);
-$light-shadow-color: hsl(44, 17%, 69%);
+$light-foreground-color: hsl(44, 17%, 69%);
 $light-weak-accent-color: hsl(28, 100%, 53%);
 $light-strong-accent-color: hsl(360, 100%, 55%);
+$light-box-shadow: 4px 8px 8px hsl(0deg 0% 0% / 0.38);
 
 // Dark theme colors
 $dark-font-color: hsl(77, 100%, 89%);
 $dark-background-color: hsl(41, 100%, 3%);
-$dark-shadow-color: hsl(45, 31%, 18%);
+$dark-foreground-color: hsl(45, 31%, 18%);
 $dark-weak-accent-color: hsl(167, 27%, 72%);
 $dark-strong-accent-color: hsl(88, 60%, 50%);
+$dark-box-shadow: 4px 8px 8px hsl(77, 100%, 89%);
