--- a/src/components/footer/styles.scss
+++ b/src/components/footer/styles.scss
@@ -1,5 +1,5 @@
 @import 'styles/colors.scss';
 
 .footer {
-  background-color: $light-shadow-color;
+  // background-color: $light-foreground-color;
 }
