ts-10: add vars for z-indexes

--- a/src/components/footer/styles.scss
+++ b/src/components/footer/styles.scss
@@ -1,5 +1,5 @@
-@import 'styles/colors.scss';
+@import 'styles/sizes.scss';
 
 .footer {
-  // background-color: $light-foreground-color;
+  font-size: $footer-font-size;
 }
