--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -5,6 +5,7 @@ $light-foreground-color: hsl(44, 17%, 69%);
 $light-weak-accent-color: hsl(28, 100%, 53%);
 $light-strong-accent-color: hsl(360, 100%, 55%);
 $light-box-shadow: 4px 8px 8px hsl(0deg 0% 0% / 0.38);
+$light-button-shadow: 2px 4px 4px hsl(0deg 0% 0% / 0.38);
 
 // Dark theme colors
 $dark-font-color: hsl(77, 100%, 89%);
