--- a/src/styles/sizes.scss
+++ b/src/styles/sizes.scss
@@ -1,9 +1,10 @@
 // Gaps & radiuses
 $block-gap: 1rem;
 $border-radius: 0.4rem;
+$default-padding: 0.6rem;
 
 // Heights
-$header-height: 4rem;
+$header-height: 5rem;
 $footer-height: 2rem;
 
 // Fonts
