--- a/src/components/button/styles.scss
+++ b/src/components/button/styles.scss
@@ -4,10 +4,11 @@
 .button {
   position: relative;
   border: none;
+  outline: none;
   background: transparent;
   padding: 0;
   cursor: pointer;
-  outline-offset: 4px;
+  outline-offset: 0.25rem;
   transition: filter 250ms;
   width: fit-content;
   height: fit-content;
@@ -18,12 +19,12 @@
     left: 0;
     width: 100%;
     height: 100%;
-    border-radius: 0.4rem;
+    border-radius: $border-radius;
     background: hsl(0deg 0% 0% / 0.25);
     will-change: transform;
-    transform: translateY(2px);
+    transform: translateY(0.125rem);
     transition: transform 600ms cubic-bezier(0.3, 0.7, 0.4, 1);
-    filter: blur(2px);
+    filter: blur(0.125rem);
   }
 
   &__edge {
@@ -32,7 +33,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    border-radius: 0.4rem;
+    border-radius: $border-radius;
     background: linear-gradient(
       to left,
       hsl(340deg 100% 16%) 0%,
@@ -46,15 +47,16 @@
     display: block;
     position: relative;
     padding: 0.6rem 0.6rem 0.4rem 0.6rem;
-    border-radius: 0.4rem;
+    border-radius: $border-radius;
+    font-size: $small-font-size;
     color: $light-background-color;
     background: $light-strong-accent-color;
     will-change: transform;
-    transform: translateY(-4px);
+    transform: translateY(-0.25rem);
     transition: transform 600ms cubic-bezier(0.3, 0.7, 0.4, 1);
 
     &::before {
-      margin: 0 4px;
+      margin: 0 0.25rem;
     }
   }
 
@@ -63,26 +65,22 @@
   }
 
   &:hover &__front {
-    transform: translateY(-6px);
+    transform: translateY(-0.375rem);
     transition: transform 250ms cubic-bezier(0.3, 0.7, 0.4, 1.5);
   }
 
   &:active &__front {
-    transform: translateY(-2px);
+    transform: translateY(-0.125rem);
     transition: transform 34ms;
   }
 
   &:hover &__shadow {
-    transform: translateY(4px);
+    transform: translateY(0.25rem);
     transition: transform 250ms cubic-bezier(0.3, 0.7, 0.4, 1.5);
   }
 
   &:active &__shadow {
-    transform: translateY(1px);
+    transform: translateY(0.06rem);
     transition: transform 34ms;
-  }
-
-  &:focus:not(:focus-visible) {
-    outline: none;
   }
 }
