--- a/src/styles/sizes.scss
+++ b/src/styles/sizes.scss
@@ -2,6 +2,7 @@
 $block-gap: 1rem;
 $border-radius: 0.4rem;
 $default-padding: 0.6rem;
+$default-margin: 0.4rem;
 
 // Heights
 $header-height: 5rem;
