--- a/src/components/navigation/styles.scss
+++ b/src/components/navigation/styles.scss
@@ -3,10 +3,10 @@
 
 @keyframes slide-in-navigation {
   from {
-    transform: translateY(-100%);
+    transform: translateX(-100%);
   }
   to {
-    transform: translateY(0%);
+    transform: translateX(0%);
   }
 }
 
