--- a/src/components/sidebar/styles.scss
+++ b/src/components/sidebar/styles.scss
@@ -2,10 +2,10 @@
 
 @keyframes slide-in-sidebar {
   from {
-    transform: translateY(-100%);
+    transform: translateX(100%);
   }
   to {
-    transform: translateY(0%);
+    transform: translateX(0%);
   }
 }
 
