--- a/src/components/header/styles.scss
+++ b/src/components/header/styles.scss
@@ -18,6 +18,10 @@
 
   &__heading {
     grid-area: header-center;
+    a {
+      text-decoration: none;
+      color: $light-font-color;
+    }
   }
 
   &__right-panel {
