--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -6,6 +6,8 @@ $light-weak-accent-color: hsl(28, 100%, 53%);
 $light-strong-accent-color: hsl(360, 100%, 55%);
 $light-box-shadow: 0.25rem 0.5rem 0.5rem hsl(0deg 0% 0% / 0.38);
 $light-button-shadow: 0.125rem 0.25rem 0.25rem hsl(0deg 0% 0% / 0.38);
+$light-text-shadow: 0.125rem 0.25rem 0.25rem hsl(28, 100%, 53%);
+$light-outline: hsl(28, 100%, 53%) dashed 0.125rem;
 
 // Dark theme colors
 $dark-font-color: hsl(77, 100%, 89%);
