ts-15: add footer content

--- a/src/components/footer/styles.scss
+++ b/src/components/footer/styles.scss
@@ -2,4 +2,17 @@
 
 .footer {
   font-size: $small-font-size;
+  display: grid;
+  align-items: center;
+  justify-items: center;
+  grid-template-areas: '. footer-copyright footer-links .';
+  grid-template-columns: 2fr 5fr 5fr 2fr;
+
+  &__copyright {
+    grid-area: footer-copyright;
+  }
+
+  &__links {
+    grid-area: footer-links;
+  }
 }
