ts-15: add mixin link-styles

--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -16,3 +16,5 @@ $dark-foreground-color: hsl(45, 31%, 18%);
 $dark-weak-accent-color: hsl(167, 27%, 72%);
 $dark-strong-accent-color: hsl(88, 60%, 50%);
 $dark-box-shadow: 0.25rem 0.5rem 0.5rem hsl(77, 100%, 89%);
+$dark-text-shadow: 0.125rem 0.25rem 0.25rem hsl(167, 27%, 72%);
+$dark-outline: hsl(167, 27%, 72%) dashed 0.125rem;
