--- a/src/components/app-link/styles.scss
+++ b/src/components/app-link/styles.scss
@@ -1,16 +1,5 @@
-@import 'styles/colors.scss';
-@import 'styles/sizes.scss';
+@import 'styles/mixins.scss';
 
 .app-link {
-  &:hover {
-    text-shadow: $light-text-shadow;
-  }
-
-  a {
-    text-decoration: none;
-    color: $light-font-color;
-    &:focus-visible {
-      outline: $light-outline;
-    }
-  }
+  @include link-styles(light);
 }
