--- a/src/styles/sizes.scss
+++ b/src/styles/sizes.scss
@@ -2,7 +2,10 @@
 $block-gap: 1rem;
 $border-radius: 0.4rem;
 $default-padding: 0.6rem;
+$big-padding: 1.2rem;
 $default-margin: 0.4rem;
+$small-margin: 0.2rem;
+$big-margin: 1rem;
 
 // Heights
 $header-height: 5rem;
