ts-16: add dark theme for the layout

--- a/src/styles/mixins/link-styles.scss
+++ b/src/styles/mixins/link-styles.scss
@@ -1,5 +1,5 @@
-@import './colors.scss';
-@import './sizes.scss';
+@import '../colors.scss';
+@import '../sizes.scss';
 
 @mixin link-styles($mode) {
   a {
