--- a/src/components/footer/styles.scss
+++ b/src/components/footer/styles.scss
@@ -1,5 +1,5 @@
 @import 'styles/sizes.scss';
-@import 'styles/mixins.scss';
+@import 'styles/mixins/link-styles.scss';
 
 .footer {
   font-size: $small-font-size;
