--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -13,8 +13,9 @@ $light-outline: hsl(28, 100%, 53%) dashed 0.125rem;
 $dark-font-color: hsl(77, 100%, 89%);
 $dark-background-color: hsl(41, 100%, 3%);
 $dark-foreground-color: hsl(45, 31%, 18%);
-$dark-weak-accent-color: hsl(167, 27%, 72%);
-$dark-strong-accent-color: hsl(88, 60%, 50%);
+$dark-weak-accent-color: hsl(88, 60%, 50%);
+$dark-strong-accent-color: hsl(140, 100%, 60%);
 $dark-box-shadow: 0.25rem 0.5rem 0.5rem hsl(167, 27%, 72%);
+$dark-button-shadow: 0.125rem 0.25rem 0.25rem hsl(167, 27%, 72%);
 $dark-text-shadow: 0.125rem 0.25rem 0.25rem hsl(88, 60%, 50%);
 $dark-outline: hsl(88, 60%, 50%) dashed 0.125rem;
