--- a/src/components/button/styles.scss
+++ b/src/components/button/styles.scss
@@ -1,5 +1,6 @@
 @import 'styles/sizes.scss';
 @import 'styles/colors.scss';
+@import 'styles/mixins/theme-colors.scss';
 
 .button {
   position: relative;
@@ -19,11 +20,15 @@
     width: 100%;
     height: 100%;
     border-radius: $border-radius;
-    background: hsl(0deg 0% 0% / 0.25);
     will-change: transform;
     transform: translateY(0.125rem);
     transition: transform 600ms cubic-bezier(0.3, 0.7, 0.4, 1);
     filter: blur(0.125rem);
+
+    @include button-shadow(light);
+    &_dark {
+      @include button-shadow(dark);
+    }
   }
 
   &__edge {
@@ -33,13 +38,11 @@
     width: 100%;
     height: 100%;
     border-radius: $border-radius;
-    background: linear-gradient(
-      to left,
-      hsl(340deg 100% 16%) 0%,
-      hsl(340deg 100% 32%) 8%,
-      hsl(340deg 100% 32%) 92%,
-      hsl(340deg 100% 16%) 100%
-    );
+
+    @include button-gradient(light);
+    &_dark {
+      @include button-gradient(dark);
+    }
   }
 
   &__front {
@@ -48,14 +51,17 @@
     padding: 0.6rem 0.6rem 0.4rem 0.6rem;
     border-radius: $border-radius;
     font-size: $small-font-size;
-    color: $light-background-color;
-    background: $light-strong-accent-color;
     will-change: transform;
     transform: translateY(-0.25rem);
     transition: transform 600ms cubic-bezier(0.3, 0.7, 0.4, 1);
 
     &::before {
       margin: 0 0.25rem;
+    }
+
+    @include button-colors(light);
+    &_dark {
+      @include button-colors(dark);
     }
   }
 
@@ -85,5 +91,9 @@
 
   &:focus-visible {
     outline: $light-outline;
+  }
+
+  &_dark:focus-visible {
+    outline: $dark-outline;
   }
 }
