ts-19: add draft styles to the modal window

--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -1,6 +1,7 @@
 // Light theme colors
 $light-font-color: hsl(0, 0%, 0%);
 $light-background-color: hsl(60, 100%, 99%);
+$light-modal-shadow-color: hsla(44, 16%, 69%, 0.38);
 $light-foreground-color: hsl(44, 17%, 69%);
 $light-weak-accent-color: hsl(28, 100%, 53%);
 $light-strong-accent-color: hsl(360, 100%, 55%);
