--- a/src/components/modal-window/styles.scss
+++ b/src/components/modal-window/styles.scss
@@ -1,9 +1,35 @@
 @import 'styles/z-indexes.scss';
+@import 'styles/colors.scss';
+@import 'styles/sizes.scss';
 
-.modal-window {
-  position: absolute;
-  top: 100px;
-  right: 100px;
-  background-color: red;
+@keyframes slide-in-modal {
+  from {
+    transform: translateY(-100%);
+  }
+  to {
+    transform: translateY(0%);
+  }
+}
+
+.modal-background {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: $light-modal-shadow-color;
   z-index: inherit;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  .modal-window {
+    animation: slide-in-modal 1000ms;
+    width: fit-content;
+    height: fit-content;
+    padding: $big-padding;
+    background-color: $light-background-color;
+    border-radius: $border-radius;
+    box-shadow: $light-box-shadow;
+  }
 }
