--- a/src/components/modal-window/styles.scss
+++ b/src/components/modal-window/styles.scss
@@ -2,6 +2,7 @@
 @import 'styles/colors.scss';
 @import 'styles/sizes.scss';
 @import 'styles/mixins/text-styles.scss';
+@import 'styles/mixins/theme-colors.scss';
 
 @keyframes slide-in-modal {
   from {
@@ -18,11 +19,15 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: $light-modal-shadow-color;
   z-index: inherit;
   display: flex;
   justify-content: center;
   align-items: center;
+  background-color: $light-modal-background-color;
+
+  &_dark {
+    background-color: $dark-modal-background-color;
+  }
 
   .modal-window {
     animation: slide-in-modal 1000ms;
@@ -33,9 +38,7 @@
     min-width: 20%;
     min-height: 20%;
     padding: $big-padding;
-    background-color: $light-background-color;
     border-radius: $border-radius;
-    box-shadow: $light-box-shadow;
 
     display: grid;
     grid-template-columns: auto;
@@ -63,6 +66,15 @@
       .button {
         margin-left: $big-margin;
       }
+    }
+
+    // Defaults colors
+    @include layout-colors(light);
+    box-shadow: $light-box-shadow;
+
+    &_dark {
+      @include layout-colors(dark);
+      box-shadow: $dark-box-shadow;
     }
   }
 }
